--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -22,8 +22,8 @@
                 </div>
                 <div class="header-nav">
                     <ul class="header-nav_items flex">
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>Projetos</li></a>
+                        <a href="{% url 'home' %}"><li>Home</li></a>
+                        <a href="{% url 'projects' %}"><li>Projetos</li></a>
                         <a href="#"><li>Pilotos</li></a>
                         <a href="#"><li>Serviços</li></a>
                         <a href="#"><li>Cursos</li></a>     
@@ -32,8 +32,8 @@
                 </div>
             </div>
             <ul class="header-nav_mobile-items flex-column">
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>Projetos</li></a>
+                <a href="{% url 'home' %}"><li>Home</li></a>
+                <a href="{% url 'projects' %}"><li>Projetos</li></a>
                 <a href="#"><li>Pilotos</li></a>
                 <a href="#"><li>Serviços</li></a>
                 <a href="#"><li>Cursos</li></a>
