--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -15,7 +15,7 @@
 		<div class="flex-column min-full-size justify-center">
 			<h1 class="title big">Soluções com Drones</h1>
 			<p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			<a href="" class="o-button">Contato</a>
+			<a href="" class="o-button-reverse">Contato</a>
 		</div>
 	</div>
 	<div class="flex justify-center section-title_container">
