Adds shuffle to project page

--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -164,6 +164,13 @@ h1, h2, h3, h4, h5, h6
     .o-button
         margin 0 5px
 
+.projects-content_item
+    margin-bottom 20px
+    overflow hidden
+    img
+        width auto
+        height 100%
+
 @media(min-width 768px)
     .projects-title
         justify-content flex-start
@@ -171,3 +178,4 @@ h1, h2, h3, h4, h5, h6
         
     .projects-content
         padding 2rem 4rem
+
