--- a/home/templates/projects.html
+++ b/home/templates/projects.html
@@ -3,18 +3,26 @@
     MyView - Projetos
 {% endblock %}
 {% block content %}
+    {% load static %}   
     <div class="flex bg-light projects-title">
         <h2 class="subtitle dark text-center">Portfólio</h2>
     </div>
     <div class="flex-column projects-content">
         <div class="flex full-w projects-content_cat">
-            <span class="o-button">Todos</span>
-            <span class="o-button">Inspeção</span>
-            <span class="o-button">Monitoramento</span>
+            <span id="all" class="o-button project-filter-button">Todos</span>
+            <span id="inspecao" class="o-button project-filter-button">Inspeção</span>
+            <span id="monitoramento" class="o-button project-filter-button">Monitoramento</span>
         </div>
-        <div id="grid" class="projects-content_items">
-            <div class="projects-content_item">
-                
+        <br>
+        <div id="grid" class="projects-content_items full-w">
+            <div class="projects-content_item" data-groups='["inspecao"]'>
+                <img src="{% static 'img/HOME2.jpg' %}" width="160" alt="">
+            </div>
+            <div class="projects-content_item" data-groups='["inspecao"]'>
+                <img src="{% static 'img/HOME2.jpg' %}" width="160" alt="">
+            </div>
+            <div class="projects-content_item" data-groups='["monitoramento"]'>
+                <img src="{% static 'img/HOME2.jpg' %}" width="160" alt="">
             </div>
         </div>
     </div>
