Adds portfolio site

--- a/home/templates/projects.html
+++ b/home/templates/projects.html
@@ -16,12 +16,30 @@
         <br>
         <div id="grid" class="projects-content_items full-w">
             <div class="projects-content_item" data-groups='["inspecao"]'>
+                <div class="projects-content_item_overlay flex-column justify-center">
+                    <i class="icon-button fa fa-facebook"></i>
+                    <br>
+                    <br>
+                    <a href="#" class="big">Featured Work</a>
+                </div>
                 <img src="{% static 'img/HOME2.jpg' %}" width="160" alt="">
             </div>
             <div class="projects-content_item" data-groups='["inspecao"]'>
+                <div class="projects-content_item_overlay flex-column justify-center">
+                    <i class="icon-button fa fa-facebook"></i>
+                    <br>
+                    <br>
+                    <a href="#" class="big">Featured Work</a>
+                </div>
                 <img src="{% static 'img/HOME2.jpg' %}" width="160" alt="">
             </div>
             <div class="projects-content_item" data-groups='["monitoramento"]'>
+                <div class="projects-content_item_overlay flex-column justify-center">
+                    <i class="icon-button fa fa-facebook"></i>
+                    <br>
+                    <br>
+                    <a href="#" class="big">Featured Work</a>
+                </div>
                 <img src="{% static 'img/HOME2.jpg' %}" width="160" alt="">
             </div>
         </div>
