--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -22,6 +22,18 @@ h1, h2, h3, h4, h5, h6
     font-family: 'Montserrat', sans-serif
     font-weight 400
 
+a
+    font-family: 'Montserrat', sans-serif
+    color: darkcolor
+    font-size: 12px
+    text-transform: uppercase
+    text-decoration none
+    transition all 400ms ease
+    &:hover, &:focus, &:active
+        color: secondarycolor
+    &.big
+        font-size 16px
+
 .flex
     display: flex
     align-items: center
@@ -77,6 +89,8 @@ h1, h2, h3, h4, h5, h6
     color: darkcolor
     font-size: 14px
     text-transform: uppercase
+    &.big
+        font-size 16px
 
 .light-text
     color: lightgraycolor
@@ -165,11 +179,28 @@ h1, h2, h3, h4, h5, h6
         margin 0 5px
 
 .projects-content_item
+    position relative
     margin-bottom 20px
     overflow hidden
     img
         width auto
         height 100%
+
+.projects-content_item_overlay
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+    background-color rgba(255, 255, 255, .0)
+    z-index 100
+    transform scale(0, 0)
+    transition all 400ms ease
+    
+.projects-content_item:hover
+    .projects-content_item_overlay
+        transform scale(1, 1)
+        background-color rgba(255, 255, 255, .75)
 
 @media(min-width 768px)
     .projects-title
