Adds project models

--- a/home/static/home/styl/home/form.styl
+++ b/home/static/home/styl/home/form.styl
@@ -19,9 +19,10 @@ input, textarea
 
 input
     height 46px
-    
-.button, .icon-button, .o-button-reverse, .o-button
+.button, .o-button-reverse, .o-button    
     font-family: 'Montserrat', sans-serif
+
+.button, .icon-button, .o-button-reverse, .o-button
     color white
     letter-spacing 1px
     font-size 13px
