--- a/home/templates/projects.html
+++ b/home/templates/projects.html
@@ -17,7 +17,7 @@
         <div id="grid" class="projects-content_items full-w">
             <div class="projects-content_item" data-groups='["inspecao"]'>
                 <div class="projects-content_item_overlay flex-column justify-center">
-                    <i class="icon-button fa fa-facebook"></i>
+                    <i class="icon-button fa fa-search"></i>
                     <br>
                     <br>
                     <a href="#" class="big">Featured Work</a>
@@ -26,7 +26,7 @@
             </div>
             <div class="projects-content_item" data-groups='["inspecao"]'>
                 <div class="projects-content_item_overlay flex-column justify-center">
-                    <i class="icon-button fa fa-facebook"></i>
+                    <i class="icon-button fa fa-search"></i>
                     <br>
                     <br>
                     <a href="#" class="big">Featured Work</a>
@@ -35,7 +35,7 @@
             </div>
             <div class="projects-content_item" data-groups='["monitoramento"]'>
                 <div class="projects-content_item_overlay flex-column justify-center">
-                    <i class="icon-button fa fa-facebook"></i>
+                    <i class="icon-button fa fa-search"></i>
                     <br>
                     <br>
                     <a href="#" class="big">Featured Work</a>
