--- a/home/static/home/styl/projects.styl
+++ b/home/static/home/styl/projects.styl
@@ -23,6 +23,8 @@
 
 .projects-content_item_overlay
     position absolute
+    padding 1.5rem
+    text-align center
     top 0
     left 0
     width 100%
