Makes single project page dynamic

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="header-content flex">
                 <div class="header-logo">
-                    <img src="{% static 'img/logo.png' %}" alt="">
+                    <a href="{% url 'home' %}"><img src="{% static 'img/logo.png' %}" alt=""></a>
                 </div>
                 <div class="header-nav">
                     <ul class="header-nav_items flex">
