--- a/home/static/home/styl/home/services.styl
+++ b/home/static/home/styl/home/services.styl
@@ -1,7 +1,7 @@
 .service-title
     height: 490px
     position: relative
-    background-image: url('/static/img/HOME2.jpg');
+    background-image: url('/static/img/drone.jpg');
 
     .title
         z-index: 100
