--- a/home/static/home/styl/home/services.styl
+++ b/home/static/home/styl/home/services.styl
@@ -2,6 +2,7 @@
     height: 490px
     position: relative
     background-image: url('/static/img/drone.jpg');
+    background-position center center
 
     .title
         z-index: 100
