--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -3,6 +3,7 @@ topfiltercolor = rgba(0, 0, 0, .6)
 .top
     background-image: linear-gradient(180deg, filtercolor, filtercolor), url('/static/img/top.jpg');
     background-size: cover
+    background-position center center
     position: relative
     height: calc(100vh - 100px)
     overflow: hidden
