--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -1,4 +1,4 @@
-topfiltercolor = rgba(0, 0, 0, .6)
+topfiltercolor = rgba(0, 0, 0, .3)
 
 .top
     background-image: linear-gradient(180deg, filtercolor, filtercolor), url('/static/img/top.jpg');
@@ -10,11 +10,11 @@ topfiltercolor = rgba(0, 0, 0, .6)
     color: white
     
     .title
-        text-transform capitalize
+        margin-bottom .5rem
+
     .subtitle, .title
         color: white
-    .title
-        margin-bottom .5rem
+        font-weight bold
 
     .subtitle
         font-size 1rem
