--- a/static/css/home.css
+++ b/static/css/home.css
@@ -783,14 +783,12 @@ input {
   color: #fff;
 }
 .top .title {
-  text-transform: capitalize;
+  margin-bottom: 0.5rem;
 }
 .top .subtitle,
 .top .title {
   color: #fff;
-}
-.top .title {
-  margin-bottom: 0.5rem;
+  font-weight: bold;
 }
 .top .subtitle {
   font-size: 1rem;
@@ -817,7 +815,7 @@ input {
   .video-container .filter {
     z-index: 100;
     position: absolute;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.3);
     width: 100%;
     height: 100%;
   }
