--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -23,9 +23,9 @@
                 <div class="header-nav">
                     <ul class="header-nav_items flex">
                         <a href="{% url 'home' %}"><li>Home</li></a>
-                        <a href="#"><li>Soluções</li></a>
+                        <a href="#"><li>Soluções e Serviços</li></a>
                         <a href="{% url 'projects' %}"><li>Portfólio</li></a>
-                        <a href="#"><li>Cursos</li></a>     
+                        <a href="#"><li>MyView Academy</li></a>     
                         <a href="#"><li>Pilotos</li></a>
                     </ul>
                     <span id="mobile-menu" class="fa fa-bars"></span>
@@ -33,9 +33,9 @@
             </div>
             <ul class="header-nav_mobile-items flex-column">
                 <a href="{% url 'home' %}"><li>Home</li></a>
-                <a href="#"><li>Soluções</li></a>
+                <a href="#"><li>Soluções e Serviços</li></a>
                 <a href="{% url 'projects' %}"><li>Portfólio</li></a>
-                <a href="#"><li>Cursos</li></a>
+                <a href="#"><li>MyView Academy</li></a>
                 <a href="#"><li>Pilotos</li></a>
             </ul>
         </header>
