--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -23,7 +23,7 @@
                 <div class="header-nav">
                     <ul class="header-nav_items flex">
                         <a href="{% url 'home' %}"><li>Home</li></a>
-                        <a href="#"><li>Soluções e Serviços</li></a>
+                        <a href="{% url 'services' %}"><li>Soluções e Serviços</li></a>
                         <a href="{% url 'projects' %}"><li>Portfólio</li></a>
                         <a href="#"><li>MyView Academy</li></a>     
                         <a href="#"><li>Pilotos</li></a>
@@ -33,7 +33,7 @@
             </div>
             <ul class="header-nav_mobile-items flex-column">
                 <a href="{% url 'home' %}"><li>Home</li></a>
-                <a href="#"><li>Soluções e Serviços</li></a>
+                <a href="{% url 'services' %}"><li>Soluções e Serviços</li></a>
                 <a href="{% url 'projects' %}"><li>Portfólio</li></a>
                 <a href="#"><li>MyView Academy</li></a>
                 <a href="#"><li>Pilotos</li></a>
