--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -16,6 +16,12 @@
 		<div class="flex-column min-full-size justify-center">
 			<h1 class="title big">{{ content.titulo }}</h1>
 			<p class="subtitle">{{ content.subtitulo }}</p>
+			<div class="flex top-icons">
+				<a target="_blank" href="https://www.facebook.com/myviewdrones/"><i class="o-icon-button fa fa-facebook"></i></a>
+				<a target="_blank" href="https://www.instagram.com/myviewbr/"><i class="o-icon-button fa fa-instagram"></i></a>
+				<a target="_blank" href="https://vimeo.com/user51265724"><i class="o-icon-button fa fa-vimeo"></i></a>
+				<a target="_blank" href="https://www.youtube.com/channel/UC1JyE1jSGskez0KXZax8wLg"><i class="o-icon-button fa fa-youtube-play"></i></a>
+			</div>
 			<a href="#contact" class="o-button-reverse">Contato</a>
 		</div>
 	</div>
