--- a/home/templates/projects.html
+++ b/home/templates/projects.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% load static %}   
     {% get_media_prefix as media_prefix %}
-    <div class="flex bg-light projects-title">
+    <div class="flex bg-light page-title">
         <h2 class="subtitle dark text-center">Portfólio</h2>
     </div>
     <div class="flex-column projects-content">
