--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -22,6 +22,11 @@ topfiltercolor = rgba(0, 0, 0, .3)
         text-transform none
         font-weight 400
 
+.top-icons
+    margin-bottom 1rem
+    .o-icon-button
+        margin 0 .5rem
+
 .video-container
     display: none
 
