--- a/home/templates/single_project.html
+++ b/home/templates/single_project.html
@@ -3,9 +3,8 @@
     MyView - {{ project.name|truncatechars:10 }}
 {% endblock %}
 {% block content %}
-    {% load static %}   
     {% get_media_prefix as media_prefix %}
-    <div class="flex bg-light single_project-title">
+    <div class="flex bg-light page-title">
         <h2 class="subtitle dark text-center">{{ project.name }}</h2>
     </div>
     <div class="single_project-container full-w">
@@ -22,3 +21,4 @@
     </div>
     
 {% endblock %}
+
