--- a/home/static/home/styl/home/header.styl
+++ b/home/static/home/styl/home/header.styl
@@ -1,9 +1,18 @@
 .header
+    top 100px
+    margin-top -100px
+    z-index 200
+    position absolute
     width: 100%
     height: 100px
     background-color: white
     overflow: hidden
-    transition: height 300ms ease
+    transition: height 300ms ease, margin-top 300ms ease
+    &.affix
+        top 0
+        margin-top 0
+        position fixed
+        box-shadow: 0 4px 2px -4px rgba(0, 0, 0, .75);
     &.active
         height: 294px
 
