--- a/home/static/home/styl/home/top.styl
+++ b/home/static/home/styl/home/top.styl
@@ -1,6 +1,7 @@
 topfiltercolor = rgba(0, 0, 0, .3)
 
 .top
+    margin-top 100px
     background-image: linear-gradient(180deg, filtercolor, filtercolor), url('/static/img/top.jpg');
     background-size: cover
     background-position center center
